--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -15,7 +15,11 @@ html {
 .header-nav-box {
   @BG: #2a2a2a;
 
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
   height: 1.12rem;
   line-height: 1.12rem;
   background: @BG;
@@ -68,6 +72,49 @@ html {
   }
 }
 
+/* footer-nav*/
+.footer-nav-box {
+  display: flex;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1.06rem;
+  line-height: 1.06rem;
+  border-top: 0.02rem solid #d5d5d5;
+
+  a {
+    flex: 1;
+    text-align: center;
+    color: #000;
+
+    &.active {
+      color: #9d0800;
+    }
+
+    i {
+      display: block;
+      margin-top: 0.01rem;
+      font-size: 0.5rem;
+    }
+
+    span {
+      display: block;
+      height: 0.5rem;
+      line-height: 0.5rem;
+      font-size: 0.32rem;
+    }
+  }
+}
+
+/* container */
+.container {
+  // 为了让内容不被导航遮盖,设置 padding
+  padding: 1.12rem 0 1.08rem 0;
+  height: 10000px;
+}
+
+/* react-transition-group style*/
 .filter-box-enter {
   opacity: 0;
 }
