完成登录信息保存在 redux 中

--- a/src/static/css/person.less
+++ b/src/static/css/person.less
@@ -6,3 +6,17 @@
     font-size: 0.4rem;
   }
 }
+
+.login-box {
+  padding: 0.2rem;
+
+  .login-form {
+    max-width: 300px;
+  }
+  .login-form-forgot {
+    float: right;
+  }
+  .login-form-button {
+    width: 100%;
+  }
+}
