完成加载页面数据并展示,调整了 action 和reducer 的写法,更正了一些类型的定义

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -8,7 +8,7 @@ html {
 
 #root {
   margin: 0 auto;
-  max-width: 750px;
+  max-width: 768px;
 }
 
 /* Nva-top*/
@@ -82,6 +82,7 @@ html {
   height: 1.06rem;
   line-height: 1.06rem;
   border-top: 0.02rem solid #d5d5d5;
+  background-color: #fff;
 
   a {
     flex: 1;
@@ -111,7 +112,6 @@ html {
 .container {
   // 为了让内容不被导航遮盖,设置 padding
   padding: 1.12rem 0 1.08rem 0;
-  height: 10000px;
 }
 
 /* react-transition-group style*/
