--- a/src/static/css/course.less
+++ b/src/static/css/course.less
@@ -75,4 +75,39 @@
       }
     }
   }
+  .base-info {
+    padding: 0 0.4rem;
+  }
+  video {
+    display: block;
+    width: 100%;
+    min-height: 3rem;
+    background: #000;
+  }
+
+  .content {
+    margin-top: 0.2rem;
+  }
+
+  h3 {
+    line-height: 0.6rem;
+  }
+  p {
+    line-height: 0.4rem;
+  }
+  span {
+    line-height: 0.6rem;
+    color: #9d0800;
+  }
+
+  button {
+    display: block;
+    margin-top: 0.2rem;
+    margin-left: 0.2rem;
+
+    span {
+      line-height: 100%;
+      color: #fff;
+    }
+  }
 }
